Style(ProfileHeader): Fix Image & Username overlap

--- a/src/assets/css/Profile.module.css
+++ b/src/assets/css/Profile.module.css
@@ -84,8 +84,7 @@
     /* box-sizing: border-box; */
     height: 180px;
     width: 180px;
-    margin-top: 30px;
-    margin-bottom: -20px;
+    margin-top: 10px;
     border-radius: 50%;
     /* clip-path: circle(50% at 50% 50%); */
 }
@@ -112,6 +111,7 @@
     direction: ltr;
     /* cursor: pointer; */
     font-weight: bold;
+    margin-top: 5px;
 }
 
 .p_name {
@@ -133,7 +133,6 @@
 }
 
 .followbutton {
-    margin-top: 10px;
     width: 100px;
     height: 30px;
     border-radius: 5px;
